<resources>
    <string name="app_name">UTS Helps</string>
    <string name="action_settings">Settings</string>
    <string name="student_id">Student ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotten_password">Forgotten password?</string>
    <string name="home">Home</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="my_profile">My Profile</string>
    <string name="my_booking">My Bookings</string>
    <string name="view_session">View All Sessions</string>
    <string name="booking_history">Booking History</string>
    <string name="title_activity_my_booking">MyBookingActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_available_sessions">AvailableSessionsActivity</string>
    <string name="title_activity_booking_history">BookingHistoryActivity</string>
    <string name="available_sessions">Available Sessions</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="student_name">Student Name:</string>
    <string name="timothy_dalton">Timothy Dalton</string>
    <string name="email">Email:</string>
    <string name="preferred_first_name">Pref First Name:</string>
    <string name="faculty">Faculty:</string>
    <string name="engineering_and_information_technology">Engineering and Information Technology</string>
    <string name="course">Course:</string>
    <string name="c10219">C10219</string>
    <string name="dummy_email">12345678@uts.edu.au</string>
    <string name="phone">Phone:</string>
    <string name="dummy_number">0423456789</string>
    <string name="dob">DOB:</string>
    <string name="dummy_dob">31/01/1997</string>
    <string name="gender">Gender:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="unspecified">Unspecified</string>
    <string name="degree">Degree:</string>
    <string name="undergraduate">Undergraduate</string>
    <string name="postgraduate">Postgraduate</string>
    <string name="year">Year:</string>
    <string name="status">Status:</string>
    <string name="permanent">Permanent</string>
    <string name="international">International</string>
    <string name="first_language">First Language:</string>
    <string name="country_of_origin">Country of Origin:</string>
    <string name="communication">Communication</string>
    <string name="writing_skills">Writing</string>
    <string name="reading_skills">Reading</string>
    <string name="speaking_skills">Speaking</string>
    <string name="listening_skills">Listening</string>
    <string name="upass">UPASS</string>
    <string name="programming">Programming</string>
    <string name="data_structure">Data Structure</string>
    <string name="interaction_design">Interaction Design</string>
    <string name="software_architecture">Software Architecture</string>
    <string name="address">Address:</string>
    <string name="_123_pitt_street">123 Pitt Street</string>
    <string name="workshop_001">Workshop 001</string>
    <string name="thursday_25_august_2016">Thursday, 25 August 2016</string>
    <string name="_13_00_15_00">13:00 - 15:00</string>
    <string name="cb10_01_105">CB10.01.105</string>
    <string name="view_detail">View Detail</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="waiting_list">Waiting List</string>
    <string name="log_out">Log out</string>
    <string name="date">Date:</string>
    <string name="_25_august_2016">25 August 2016</string>
    <string name="time">Time:</string>
    <string name="location">Location:</string>
    <string name="topics">Topics:</string>
    <string name="academic_writing">Academic Writing</string>
    <string name="set_reminder">Set reminder</string>
    <string name="record_attendance">Record attendance</string>
    <string name="title_activity_booking_detail">Booking Details</string>
    <string name="title_activity_contact">Contact Us</string>
    <string name="helps_office_cb_01_05_25">HELPS Office (CB.01.05.25)</string>
    <string name="uts_blake_library_research_helpdesk">UTS Blake Library (Research helpdesk)</string>
    <string name="monday_to_thursday_12noon_6pm">Monday to Thursday: 12noon - 6pm</string>
    <string name="friday_12noon_5pm">Friday: 12noon - 5pm</string>
    <string name="monday_to_thursday_4pm_7pm">Monday to Thursday: 4pm - 7pm</string>
    <string name="saturday_1pm_4pm">Saturday: 1pm - 4pm</string>
    <string name="online_chat">Online chat</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="about_helps">About HELPS</string>
    <string name="helps_text">Higher Education Language and Presentation Support (HELPS) provides non-credited English language and academic literacy support to UTS undergraduate and postgraduate coursework students.</string>
    <string name="helps_text2">At HELPS, we can enhance your learning experience by providing individual and group support in a friendly and respectful environment. We can also help you become an independent and confident learner through the development of your English language and academic understanding, so you can reach your study and career goals.</string>
    <string name="helps_phone">Phone: (02) 9514 9733</string>
    <string name="helps_email">Email: helps@uts.edu.au</string>
    <string name="reminderBtn">Do you want to get informed by SMS/Email?</string>
    <string name="title_activity_session_details">SessionDetails</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="attendance_recorded">Attendance Recorded</string>
    <string name="submit">Submit</string>
    <string name="book_session">Book Session</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="workshop">Workshop</string>
    <string name="login_successful">Login successful</string>
    <string name="incorrect_password">ID or password is incorrect</string>
    <string name="enter_id_or_password">Please enter ID or password</string>
    <string name="uts_email">\@uts.edu.au</string>
    <string name="registration_successful">Registration successful</string>
    <string name="id_already_registered">The user ID is already registered</string>
    <string name="password_short">Your password is too short, enter minimum 6 characters!</string>
    <string name="enter_password">Please enter your password!</string>
    <string name="enter_id">Please enter your student ID!</string>
    <string name="enter_all_details">Please enter all details!</string>
    <string name="booking_confirmation_message">Are you sure you want to book this session?</string>
    <string name="confirm">Confirm</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="when_reminded">When would you like to be reminded?</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="select_a_date">Select a date</string>
    <string name="select_a_time">Select a time</string>
    <string name="done">Done</string>
    <string name="session_full">Session full</string>
    <string name="waitlist_message">This session has reached max capacity, would you like to join the waitlist?</string>
    <string name="join_waitlist">Join waitlist</string>
    <string name="confirm_alert">Confirm</string>
    <string name="added_to_waitlist">You have been added to the waitlist</string>
    <string name="how_would_you_like_to_be_reminded">How would you like to be reminded?</string>
    <string name="sms">SMS</string>
    <string name="email_title">Email</string>
    <string name="best_contact_number">Best Contact Number</string>
    <string name="study_year">Study Year</string>
    <string name="international_student">International Student</string>
    <string-array name="time">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="ampm">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string-array name="reminder">
        <item>30 minutes prior session</item>
        <item>1 day prior session</item>
        <item>7 days prior session</item>
    </string-array>
    <string name="title_activity_all_sessions">AllSessionsActivity</string>
    <string name="id_8_numbers">Your student id should match 8 number</string>
</resources>
