<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.utshelps.utshelpsapp.MainActivity">

    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="101"
        android:title="@string/contact_us"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="102"
        android:title="@string/about_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="103"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
